# target-optiply

./: meltano.yml  pyproject.toml  requirements.txt
target_optiply/: __init__.py  __main__.py  auth.py  client.py  sinks.py  target.py
