[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "target-optiply"
version = "0.1.0"
authors = [
    { name = "Eduardo Sequeira", email = "eduardosequeira@optiply.nl" },
]
description = "A Singer target for Optiply API"
readme = "README.md"
requires-python = ">=3.7.1,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.dependencies]
singer-sdk = ">=0.34.0"
requests = ">=2.31.0"
backoff = ">=2.0.0"

[project.scripts]
target-optiply = "target_optiply.target:TargetOptiply.cli"

[project.urls]
"Homepage" = "https://github.com/eduardosequeir4/target-optiply"
"Bug Tracker" = "https://github.com/eduardosequeir4/target-optiply/issues"

[tool.hatch.build.targets.wheel]
packages = ["target_optiply"]

[tool.hatch.build.targets.sdist]
include = [
    "target_optiply",
]

[tool.hatch.build.targets.editable]
packages = ["target_optiply"]

[tool.poetry]
name = "target-optiply"
version = "0.1.0"
description = "`target-optiply` is a Singer target for Optiply, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Eduardo Sequeira <eduardosequeira@optiply.nl>"]
keywords = [
    "ELT",
    "Optiply",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
singer-sdk = ">=0.34.0"
requests = ">=2.31.0"
backoff = ">=2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_optiply"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_optiply"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.poetry.scripts]
target-optiply = "target_optiply.target:TargetOptiply.cli"
